<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LortAnswers</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_app_base">AppBaseActivity</string>
    <string name="title_activity_compose_question">Compose Question</string>
    <string name="compose_title">TITLE</string>
    <string name="compose_title_hint">Enter a title (required)</string>
    <string name="compose_desc">DETAILS</string>
    <string name="compose_camera">PICTURE</string>
    <string name="compose_desc_hint">Enter some details</string>
    <string name="compose_tags">TAGS</string>
    <string name="compose_answer">SUBMIT AN ANSWER</string>
    <string name="compose_tags_hint">eg: Android, 301, Programming</string>
    <string name="title_activity_question_view">QuestionViewActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="compose_reply">Write Reply:</string>
    <string name="question_view_comment_indicator">[ + ] 0 comments</string>
    <string name="answer_hint">Enter answer</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="set_location">Set Manually</string>
    <string name="set_location_man">Set Location Manually</string>
    <string name="attach_location">Attach Location</string>
    <string name="set_byGPS">Set By GPS</string>
    <string name="yourLocation">Your Location Is Set To:</string>
    <string name="location_string">No Location Specified</string>
    
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="no_address_found">No address found for location</string>
	

</resources>
