<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lortgreen"
    tools:context="com.github.cmput301f14t11.teamlort.SettingsActivity" >

    <EditText
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/longitude"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:id="@+id/set_loc_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/latitude"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:text="@string/set_location_man"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/locationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/longitude"
        android:layout_below="@+id/set_location_btn"
        android:layout_marginTop="33dp"
        android:text="@string/attach_location" />

    <Button
        android:id="@+id/set_location_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/longitude"
        android:layout_below="@+id/longitude"
        android:layout_marginTop="21dp"
        android:text="@string/set_location" />

    <Button
        android:id="@+id/setByGPS_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationSwitch"
        android:layout_alignRight="@+id/longitude"
        android:text="@string/set_byGPS" />

    <TextView
        android:id="@+id/yourLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/yourLocation" />

    <TextView
        android:id="@+id/location_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourLocation"
        android:layout_centerHorizontal="true"
        android:text="@string/location_string" />

</RelativeLayout>
